--- a/portfolio.html
+++ b/portfolio.html
@@ -147,9 +147,60 @@
     </main>
     <footer class="footer">
         <div class="container div-footer">
-          <a class="logotype link link-footer" href="./index.html">WEB<span class="logo-footer">STUDIO</span> </a>
-          <p class="details text">Increase the flow of customers and sales for your business with digital marketing 
-         </p>
+            <div>
+               <a class="logotype link link-footer" href="./index.html">WEB<span class="logo-footer">STUDIO</span> </a>
+               <p class="details text">Increase the flow of customers and sales for your business with digital marketing 
+               </p>
+            </div>
+            <div>
+                <p class="text text-soc">Social media</p>
+                <ul class="list footer-list">
+                   <li>
+                    <a class="footer-link link" 
+                            href=""
+                            aria-label="Instagram"
+                            target="_blank"
+                            rel="noopener noreferrer">
+                              <svg class="footer-icons" width="24" height=24">
+                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                               </svg>
+                           </a>
+                   </li>
+                   <li>
+                    <a class="footer-link link" 
+                            href=""
+                            aria-label="Twitter"
+                            target="_blank"
+                            rel="noopener noreferrer">
+                              <svg class="footer-icons" width="24" height=24">
+                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                               </svg>
+                           </a>
+                   </li>
+                   <li>
+                    <a class="footer-link link" 
+                            href=""
+                            aria-label="Facebook"
+                            target="_blank"
+                            rel="noopener noreferrer">
+                              <svg class="footer-icons" width="24" height=24">
+                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                               </svg>
+                           </a>
+                   </li>
+                   <li>
+                    <a class="footer-link link" 
+                            href=""
+                            aria-label="Linkedin"
+                            target="_blank"
+                            rel="noopener noreferrer">
+                              <svg class="footer-icons" width="24" height=24">
+                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                               </svg>
+                           </a>
+                   </li>
+                </ul>
+                </div>
         </div>
     </footer>
 </body>
