--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <li class="future">
                     <div class="div-ft-ic">
                        <svg class="future-icons" width="64" height="64">
-                         <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                         <use href="./images/icons.svg#icon-antenna"></use>
                        </svg>
                     </div>
                      <h3 class="quality title3">Strategy</h3>
@@ -72,7 +72,7 @@
                   <li class="future ">
                     <div class="div-ft-ic">
                       <svg class="future-icons" width="64" height="64">
-                        <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        <use href="./images/icons.svg#icon-clock"></use>
                       </svg>
                    </div>
                      <h3 class="quality title3">Punctuality</h3>
@@ -83,7 +83,7 @@
                  <li class="future">
                   <div class="div-ft-ic">
                     <svg class="future-icons" width="64" height="64">
-                      <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                      <use href="./images/icons.svg#icon-diagram"></use>
                     </svg>
                  </div>
                      <h3 class="quality title3">Diligence</h3>
@@ -94,7 +94,7 @@
                  <li class="future">
                   <div class="div-ft-ic">
                     <svg class="future-icons" width="64" height="64">
-                      <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                      <use href="./images/icons.svg#icon-astronaut"></use>
                     </svg>
                  </div>
                      <h3 class="quality title3">Technologies</h3>
@@ -149,7 +149,7 @@
                                            target="_blank"
                                            rel="noopener noreferrer">
                                            <svg class="social-icons" width="16" height="16">
-                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                             <use href="./images/icons.svg#icon-instagram"></use>
                                            </svg>
                                          </a>
                                       </li>
@@ -160,7 +160,7 @@
                                           target="_blank"
                                           rel="noopener noreferrer">
                                           <svg class="social-icons" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                           </svg>
                                         </a>
                                      </li>
@@ -171,7 +171,7 @@
                                           target="_blank"
                                           rel="noopener noreferrer">
                                           <svg class="social-icons" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                           </svg>
                                         </a>
                                      </li>
@@ -182,7 +182,7 @@
                                           target="_blank"
                                         rel="noopener noreferrer">
                                           <svg class="social-icons" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                           </svg>
                                         </a>
                                      </li>
@@ -205,7 +205,7 @@
                                               target="_blank"
                                               rel="noopener noreferrer">
                                               <svg class="social-icons" width="16" height="16">
-                                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                                <use href="./images/icons.svg#icon-instagram"></use>
                                               </svg>
                                             </a>
                                          </li>
@@ -216,7 +216,7 @@
                                              target="_blank"
                                              rel="noopener noreferrer">
                                              <svg class="social-icons" width="16" height="16">
-                                               <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                               <use href="./images/icons.svg#icon-twitter"></use>
                                              </svg>
                                            </a>
                                         </li>
@@ -227,7 +227,7 @@
                                              target="_blank"
                                              rel="noopener noreferrer">
                                              <svg class="social-icons" width="16" height="16">
-                                               <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                               <use href="./images/icons.svg#icon-facebook"></use>
                                              </svg>
                                            </a>
                                         </li>
@@ -238,7 +238,7 @@
                                              target="_blank"
                                              rel="noopener noreferrer">
                                              <svg class="social-icons" width="16" height="16">
-                                               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                               <use href="./images/icons.svg#icon-linkedin"></use>
                                              </svg>
                                            </a>
                                         </li>
@@ -260,7 +260,7 @@
                                           target="_blank"
                                           rel="noopener noreferrer">
                                           <svg class="social-icons" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                           </svg>
                                         </a>
                                      </li>
@@ -271,7 +271,7 @@
                                           target="_blank"
                                           rel="noopener noreferrer">
                                          <svg class="social-icons" width="16" height="16">
-                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                           <use href="./images/icons.svg#icon-twitter"></use>
                                          </svg>
                                        </a>
                                     </li>
@@ -282,7 +282,7 @@
                                          target="_blank"
                                          rel="noopener noreferrer">
                                          <svg class="social-icons" width="16" height="16">
-                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                           <use href="./images/icons.svg#icon-facebook"></use>
                                          </svg>
                                        </a>
                                     </li>
@@ -293,7 +293,7 @@
                                          target="_blank"
                                          rel="noopener noreferrer">
                                          <svg class="social-icons" width="16" height="16">
-                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                          </svg>
                                        </a>
                                     </li>
@@ -315,7 +315,7 @@
                                          target="_blank"
                                          rel="noopener noreferrer">
                                           <svg class="social-icons" width="16" height="16">
-                                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                           </svg>
                                         </a>
                                      </li>
@@ -326,7 +326,7 @@
                                          target="_blank"
                                          rel="noopener noreferrer">
                                          <svg class="social-icons" width="16" height="16">
-                                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                           <use href="./images/icons.svg#icon-twitter"></use>
                                          </svg>
                                        </a>
                                     </li>
@@ -337,7 +337,7 @@
                                          target="_blank"
                                          rel="noopener noreferrer">
                                          <svg class="social-icons" width="16" height="16">
-                                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                           <use href="./images/icons.svg#icon-facebook"></use>
                                          </svg>
                                        </a>
                                     </li>
@@ -348,7 +348,7 @@
                                          target="_blank"
                                          rel="noopener noreferrer">
                                          <svg class="social-icons" width="16" height="16">
-                                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                           <use href="./images/icons.svg#icon-linkedin"></use>
                                          </svg>
                                        </a>
                                     </li>
@@ -369,7 +369,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="cust-icons" width="104" height="56">
-                           <use href="./images/symbol-defs.svg#icon-Logo"></use>
+                           <use href="./images/icons.svg#icon-Logo"></use>
                          </svg>
                      </a>
                   </li>
@@ -380,7 +380,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="cust-icons" width="104" height="56">
-                           <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                           <use href="./images/icons.svg#icon-Logo-1"></use>
                          </svg>
                      </a>
                   </li>
@@ -391,7 +391,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="cust-icons" width="104" height="56">
-                           <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                           <use href="./images/icons.svg#icon-Logo-2"></use>
                          </svg>
                      </a>
                   </li>
@@ -402,7 +402,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="cust-icons" width="104" height="56">
-                           <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                           <use href="./images/icons.svg#icon-Logo-3"></use>
                          </svg>
                      </a>
                   </li>
@@ -413,7 +413,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="cust-icons" width="104" height="56">
-                           <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+                           <use href="./images/icons.svg#icon-Logo-4"></use>
                          </svg>
                      </a>
                   </li>
@@ -424,7 +424,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="cust-icons" width="104" height="56">
-                           <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+                           <use href="./images/icons.svg#icon-Logo-5"></use>
                          </svg>
                      </a>
                   </li>
@@ -449,7 +449,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="footer-icons" width="24" height=24">
-                           <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                           <use href="./images/icons.svg#icon-instagram"></use>
                          </svg>
                      </a>
              </li>
@@ -460,7 +460,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="footer-icons" width="24" height=24">
-                           <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                           <use href="./images/icons.svg#icon-twitter"></use>
                          </svg>
                      </a>
              </li>
@@ -471,7 +471,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="footer-icons" width="24" height=24">
-                           <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                           <use href="./images/icons.svg#icon-facebook"></use>
                          </svg>
                      </a>
              </li>
@@ -482,7 +482,7 @@
                       target="_blank"
                       rel="noopener noreferrer">
                         <svg class="footer-icons" width="24" height=24">
-                           <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                           <use href="./images/icons.svg#icon-linkedin"></use>
                          </svg>
                      </a>
              </li>
