--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,7 @@
                             target="_blank"
                             rel="noopener noreferrer">
                               <svg class="footer-icons" width="24" height=24">
-                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                 <use href="./images/icons.svg#icon-instagram"></use>
                                </svg>
                            </a>
                    </li>
@@ -173,7 +173,7 @@
                             target="_blank"
                             rel="noopener noreferrer">
                               <svg class="footer-icons" width="24" height=24">
-                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                 <use href="./images/icons.svg#icon-twitter"></use>
                                </svg>
                            </a>
                    </li>
@@ -184,7 +184,7 @@
                             target="_blank"
                             rel="noopener noreferrer">
                               <svg class="footer-icons" width="24" height=24">
-                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                 <use href="./images/icons.svg#icon-facebook"></use>
                                </svg>
                            </a>
                    </li>
@@ -195,7 +195,7 @@
                             target="_blank"
                             rel="noopener noreferrer">
                               <svg class="footer-icons" width="24" height=24">
-                                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                </svg>
                            </a>
                    </li>
