--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                       aria-label="Instagram"
                       target="_blank"
                       rel="noopener noreferrer">
-                        <svg class="footer-icons" width="24" height=24">
+                        <svg class="footer-icons" width="24" height="24">
                            <use href="./images/icons.svg#icon-instagram"></use>
                          </svg>
                      </a>
@@ -459,7 +459,7 @@
                       aria-label="Twitter"
                       target="_blank"
                       rel="noopener noreferrer">
-                        <svg class="footer-icons" width="24" height=24">
+                        <svg class="footer-icons" width="24" height="24">
                            <use href="./images/icons.svg#icon-twitter"></use>
                          </svg>
                      </a>
@@ -470,7 +470,7 @@
                       aria-label="Facebook"
                       target="_blank"
                       rel="noopener noreferrer">
-                        <svg class="footer-icons" width="24" height=24">
+                        <svg class="footer-icons" width="24" height="24">
                            <use href="./images/icons.svg#icon-facebook"></use>
                          </svg>
                      </a>
@@ -481,7 +481,7 @@
                       aria-label="Linkedin"
                       target="_blank"
                       rel="noopener noreferrer">
-                        <svg class="footer-icons" width="24" height=24">
+                        <svg class="footer-icons" width="24" height="24">
                            <use href="./images/icons.svg#icon-linkedin"></use>
                          </svg>
                      </a>
